--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
                             <h3>designer + developer</h3>
                         </div>
                         <div class="d-flex justify-content-center ifont">
-                            <i class="bi bi-twitter"></i><i class="bi bi-facebook"></i><i class="bi bi-dribbble"></i><i
-                                class="bi bi-linkedin"></i>
+                            <i class="fa-brands fa-twitter scales"></i>
+                            <i class="fa-brands fa-facebook scales"></i>
+                            <i class="fa-brands fa-dribbble scales"></i>
+                            <i class="fa-brands fa-square-reddit scales"></i>
+                            <i class="fa-brands fa-vimeo-v scales"></i>
+                            <i class="fa-brands fa-linkedin scales"></i>
+                            <i class="fa-brands fa-google-plus scales"></i>
                         </div>
                     </div>
                 </div>
