--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </p>
                         </div>
                     </div>
-                    <div style="padding: 1rem"><img src="public/signature.png" alt="signature" style="
+                    <div style="padding: 1vw"><img src="public/signature.png" alt="signature" style="
                         height: 3vw;
                     "></div>
                     <a href="#contact" class="mt-button large btn ifont"><i
