--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
                             </p>
                         </div>
                     </div>
-                    <div style="padding: 1vw"><img src="public/signature.png" alt="signature" style="
-                        height: 3vw;
-                    "></div>
+                    <div style="padding: 1vw"><img src="public/signature.png" alt="signature" class="sign"></div>
                     <a href="#contact" class="mt-button large btn ifont"><i
                             class="bi bi-cloud-arrow-down"></i><span>Download
                             Resume</span></a>
@@ -119,8 +117,8 @@
                 padding-left: 5vw;
             ">
                     <div style="
-                    padding-left: 20px;
-                    padding-bottom: 1rem;
+                    padding-left: 2vw;
+                    padding-bottom: 1vw;
                 ">
                         <h4>hobbies & interests</h4>
                     </div>
