--- a/index.html
+++ b/index.html
@@ -399,10 +399,7 @@
                 </div>
                 <div class="imgrow">
                     <form class="form" action="" method="post">
-                        <div style="
-                        display: flex;
-                        justify-content: space-between;
-                    ">
+                        <div class="contdata">
                             <input type="text" name="name" placeholder="Name" required="">
                             <input type="text" name="email" placeholder="Email" required="">
                         </div>
