--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                             class="bi bi-cloud-arrow-down"></i><span>Download
                             Resume</span></a>
                 </div>
-                <div style="
-                padding-left: 5vw;
-            ">
+                <div>
                     <div style="
                     padding-left: 2vw;
                     padding-bottom: 1vw;
