--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 <div class="squarebase square"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
                             </div>
                         </div>
-                        <div class="leftflex">
+                        <div class="leftflex paddmobile">
                             <div>
                                 <h4>analytics</h4>
                                 <p class="second">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in animi.
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                     <div class="right gapping">
-                        <div class="leftflex">
+                        <div class="leftflex rightflex">
                             <div>
                                 <div class="squarebase square"><i class="fa-solid fa-flask"></i></div>
                             </div>
@@ -232,7 +232,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="leftflex">
+                        <div class="leftflex rightflex paddmobile">
                             <div>
                                 <div class="squarebase square"><i class="bi bi-globe-central-south-asia"></i></div>
                             </div>
@@ -242,7 +242,7 @@
                                     deserunt eligendi.</p>
                             </div>
                         </div>
-                        <div class="leftflex">
+                        <div class="leftflex rightflex">
                             <div>
                                 <div class="squarebase square"><i class="fa-solid fa-anchor"></i></div>
                             </div>
